seed and word
