# api/internal/application/router/daily.go
@@ -1,0 +1,11 @@
+package router
+
+import (
+	"api/internal/application/controller"
+
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterDailyRoutes(router *gin.Engine, controller *controller.DailyController) {
+	router.GET("/daily", controller.GetToday)
+}
