# api/internal/domain/domainObject/drawing.go
@@ -2,14 +2,23 @@ package domainObject
 
 type Drawing struct {
 	ID          uint   `gorm:"primaryKey" json:"id"`
-	Image       string `json:"image" binding:"required"`
-	User        uint   `gorm:"foreignKey:UserID" json:"user"`
-	Description string `json:"description"`
-	Word        string `json:"word"`
+	UserID      uint   `json:"user_id"`
+	User        User   `gorm:"foreignKey:UserID" json:"user"`
+	DailyID     uint   `json:"daily_id"`
+	Daily       Daily  `gorm:"foreignKey:DailyID" json:"daily"`
+	Image       string `gorm:"not null" json:"image" binding:"required"`
+	Description string `gorm:"not null" json:"description"`
 	Likes       int    `json:"likes"`
 	Dislikes    int    `json:"dislikes"`
 	LikedBy     []User `gorm:"many2many:drawings_likes;" json:"liked_by"`
 	DislikedBy  []User `gorm:"many2many:drawings_dislikes;" json:"disliked_by"`
+}
+
+type DrawingRequest struct {
+	Image       string `json:"image" binding:"required"`
+	User        uint   `json:"user" binding:"required"`
+	Description string `json:"description" binding:"required"`
+	Daily       uint   `json:"daily" binding:"required"`
 }
 
 // DrawingResponse represents a drawing with safe users, without passwords
@@ -18,19 +27,19 @@ type DrawingResponse struct {
 	Image       string
 	User        UserResponse
 	Description string
-	Word        string
+	Daily       Daily
 	Likes       int
 	Dislikes    int
 	LikedBy     []UserResponse
 	DislikedBy  []UserResponse
 }
 
-func ConvertDrawingResponse(drawing Drawing) DrawingResponse {
+func ConvertToDrawingResponse(drawing Drawing) DrawingResponse {
 	var safeDrawing DrawingResponse
 	safeDrawing.ID = drawing.ID
 	safeDrawing.Image = drawing.Image
 	safeDrawing.Description = drawing.Description
-	safeDrawing.Word = drawing.Word
+	safeDrawing.Daily = drawing.Daily
 	safeDrawing.Likes = drawing.Likes
 	safeDrawing.Dislikes = drawing.Dislikes
 
@@ -42,7 +51,7 @@ func ConvertDrawingResponse(drawing Drawing) DrawingResponse {
 		safeDrawing.DislikedBy = append(safeDrawing.DislikedBy, ConvertToUserResponse(user))
 	}
 
-	// safeDrawing.User = ConvertToUserResponse(drawing.User)
+	safeDrawing.User = ConvertToUserResponse(drawing.User)
 
 	return safeDrawing
 }
